// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
     
    0
     
  </span>
  <button
    onClick={[Function]}
  >
      
  </button>
</div>
`;

exports[`ProductTitle should show component correct 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
